# py-build-example

./: README.md  main.py  pyproject.toml
.github/workflows/: build.yml
