[project]
name = "py-build-example"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "example-package",
    "py-private-pkg-build-example",
]

[tool.uv.sources]
example-package = { url = "https://github.com/tkoncz/py-pkg-build-example/releases/download/v0.3.0/example_package-0.3.0.tar.gz" }
py-private-pkg-build-example = { git = "https://github.com/tkoncz/py-private-pkg-build-example", rev = "v0.1.0" }
